--- a/Pagina1/index.html
+++ b/Pagina1/index.html
@@ -24,13 +24,13 @@
       </nav>
       <section>
         <article  id="articulo1">
-          <img src="img/ivan.JPG" height="130">
+          <img src="img/ivan.jpg" height="130">
 
           <h3>Cableado estructurado, red eléctrica, CCTV, Red de Datos y alarma de intrusión para Oficinas</h3>
 
         </article>
         <article id="articulo2">
-          <img src="img/mike.JPG" height="130">
+          <img src="img/mike.jpg" height="130">
           <h3>Soluciones Tecnológica y eléctricas  integrales para empresas</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam
